k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garbanzo
  labels:
    app: garbanzo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: garbanzo
  template:
    metadata:
      labels:
        app: garbanzo
    spec:
      containers:
      - name: app
        image: garbanzo:latest
        ports:
        - containerPort: 8080
